--- a/january/day_3/.vscode/settings.json
+++ b/january/day_3/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "*.ndjson": "jsonl",
     "*.dbclient-js": "javascript",
-    "random": "cpp"
+    "random": "cpp",
+    "ostream": "cpp"
   }
 }
