--- a/may/.vscode/settings.json
+++ b/may/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
   "files.associations": {
+    "*.dbclient-js": "javascript",
     "*.sqlbook": "sql",
     "*.ndjson": "jsonl",
-    "*.dbclient-js": "javascript",
-    "numeric": "cpp"
+    "numeric": "cpp",
+    "iostream": "cpp"
   }
 }
